# bic-pipelines

./: .gitignore  CMakeLists.txt  README
lib/: Candidate.pm  Startup.pm  pipeline_functions.pm
lib/NeuroDB/: BVL.pm  DBI.pm  File.pm  MRI.pm  Mail.pm  Notify.pm
